Moved sample/template CSVs into data/ and updated paths

--- a/Ottawa_pulse.ipynb
+++ b/Ottawa_pulse.ipynb
@@ -23,7 +23,7 @@
     "import altair as alt\n",
     "\n",
     "# Load data\n",
-    "df = pd.read_csv(\"listings_sample.csv\", parse_dates=[\"date_listed\"])\n",
+    "df = pd.read_csv(\"data/listings_sample.csv\", parse_dates=[\"date_listed\"])\n",
     "\n",
     "# Title\n",
     "st.title(\"🏠 Ottawa Listing Pulse\")\n",
